--- a/reports/devis.jrxml
+++ b/reports/devis.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="devis" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="15" uuid="cf680310-cd08-40e9-9c90-9cceb27ba636">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="196"/>
-	<property name="ireport.y" value="827"/>
+	<property name="ireport.x" value="8"/>
+	<property name="ireport.y" value="579"/>
 	<style name="default" isDefault="true" fontName="Arial" fontSize="9" isBold="false"/>
 	<style name="title" fontName="Arial" fontSize="16" isBold="true"/>
 	<style name="titleCol" hAlign="Left" fontName="Arial" fontSize="12" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
@@ -342,6 +342,7 @@
 				<staticText>
 					<reportElement style="legend" x="0" y="102" width="555" height="16" uuid="3911c93f-b41a-4187-b217-7e07b18a57f8"/>
 					<box topPadding="2" leftPadding="2" bottomPadding="2" rightPadding="2"/>
+					<textElement textAlignment="Left"/>
 					<text><![CDATA[Les tarifs indiqués incluent la prestation de formation et la fourniture d'un support de cours par participant]]></text>
 				</staticText>
 				<staticText>
@@ -583,7 +584,7 @@
 				<text><![CDATA[Tarif total €]]></text>
 			</staticText>
 			<textField>
-				<reportElement style="title" mode="Opaque" x="0" y="0" width="555" height="32" backcolor="#DCDCDC" uuid="a0d8af01-b4fd-451a-b001-04ac43f90ae5"/>
+				<reportElement style="title" mode="Opaque" x="0" y="0" width="555" height="32" backcolor="#FFFFFF" uuid="a0d8af01-b4fd-451a-b001-04ac43f90ae5"/>
 				<box topPadding="4">
 					<topPen lineWidth="1.0"/>
 					<leftPen lineWidth="1.0"/>
@@ -592,19 +593,21 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none">
 					<paragraph lineSpacing="1_1_2"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Proposition financière N°" + $P{noDevis}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Proposition financière"]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement mode="Opaque" x="0" y="32" width="555" height="36" backcolor="#DCDCDC" uuid="7eb048e8-e9bb-412b-8de8-d65ee07c852b"/>
+				<reportElement mode="Opaque" x="0" y="32" width="555" height="36" backcolor="#FFFFFF" uuid="7eb048e8-e9bb-412b-8de8-d65ee07c852b"/>
 				<box topPadding="2" leftPadding="2" bottomPadding="2" rightPadding="2">
 					<leftPen lineWidth="1.0"/>
 					<bottomPen lineWidth="1.0"/>
 					<rightPen lineWidth="1.0"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" markup="html">
 					<font isItalic="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Merci de bien vouloir compléter les parties ci-dessous, et de nous faire parvenir la présente proposition financière paraphée et signée avec la mention «Bon pour Commande» par fax (Fax +33(0)1.43. 34. 90. 95), scanné par mail, ou par courrier postal à l’adresse indiquée en bas de cette page"]]></textFieldExpression>
+				<textFieldExpression><![CDATA[Merci de bien vouloir compléter les parties ci-dessous, et de nous faire parvenir (scannée par mail ou par fax : +33(0)1 43 34 90
+
+95) la présente proposition financière paraphée et signée avec la mention «<b>Bon pour Commande</b>»]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnHeader>
