--- a/reports/devis.jrxml
+++ b/reports/devis.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="devis" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="15" uuid="cf680310-cd08-40e9-9c90-9cceb27ba636">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="863"/>
+	<property name="ireport.x" value="286"/>
+	<property name="ireport.y" value="284"/>
 	<style name="default" isDefault="true" fontName="Arial" fontSize="9" isBold="false"/>
 	<style name="title" fontName="Arial" fontSize="16" isBold="true"/>
 	<style name="titleCol" hAlign="Left" fontName="Arial" fontSize="12" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
@@ -518,6 +518,12 @@
 			</staticText>
 			<textField>
 				<reportElement x="132" y="98" width="423" height="38" isPrintWhenDetailOverflows="true" uuid="8212636e-6e91-4c23-8f2b-e9f93aca5f9f"/>
+				<box>
+					<topPen lineWidth="1.0"/>
+					<leftPen lineWidth="1.0"/>
+					<bottomPen lineWidth="1.0"/>
+					<rightPen lineWidth="1.0"/>
+				</box>
 				<textElement markup="html"/>
 				<textFieldExpression><![CDATA["Les formations que nous vous proposons ci-dessous sont en inter-entreprises. <br/>Les participants de sociétés différentes participent ensemble à la même formation"]]></textFieldExpression>
 			</textField>
