--- a/reports/devis.jrxml
+++ b/reports/devis.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="devis" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="15" uuid="cf680310-cd08-40e9-9c90-9cceb27ba636">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="18"/>
-	<property name="ireport.y" value="799"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="750"/>
 	<style name="default" isDefault="true" fontName="Arial" fontSize="9" isBold="false"/>
 	<style name="title" fontName="Arial" fontSize="16" isBold="true"/>
 	<style name="titleCol" hAlign="Left" fontName="Arial" fontSize="12" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
@@ -710,7 +710,7 @@
 			<staticText>
 				<reportElement style="adresse" x="0" y="36" width="471" height="11" forecolor="#0000FF" uuid="c8525ebb-0499-4001-aec4-93a770178122"/>
 				<textElement textAlignment="Left"/>
-				<text><![CDATA[ RCS Nanterre B 421 694 779 - APE 6202A - Siren : 421 694 779 - N° Déclaration d'activité : 119 211 300 92]]></text>
+				<text><![CDATA[ RCS Nanterre B 421 694 779 - APE 6202A - Siret : 42169477900057 - N° Déclaration d'activité : 119 211 300 92]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="adresse" x="0" y="22" width="471" height="12" forecolor="#0000FF" uuid="207777f7-fc8b-4180-8d99-23aac978bb07"/>
