Splitting Objectif en 2 champs : Descriptif et Objectif

--- a/WebContent/mz/formation/layout/web.xhtml
+++ b/WebContent/mz/formation/layout/web.xhtml
@@ -22,6 +22,12 @@
 	<table width="100%">
 		<tr>
 			<td width="50%" valign="top">
+			   <fieldset>
+					<legend> #{messages['formation.descriptif']}</legend>
+					
+					<ui:insert name="descriptif" />
+
+				</fieldset>		
 				<fieldset>
 					<legend> #{messages['formation.objectifs']}</legend>
 					
