Preview maj objectifs

--- a/WebContent/mz/layout/menu.xhtml
+++ b/WebContent/mz/layout/menu.xhtml
@@ -52,6 +52,12 @@
 					id="menuCreateId" action="#{formationManager.createNew}"
 					value="Nouvelle Formation" propagation="none" />
 			</rich:menuItem>
+			<rich:menuItem submitMode="client"
+				rendered="#{sessionDataManager.managerIntervenantsManager}">
+				<s:link rendered="#{sessionDataManager.managerIntervenantsManager}"
+					id="menuUpdate" view="/mz/update/update.xhtml" 
+					value="Mise à jour Description/Objectifs" propagation="none" />
+			</rich:menuItem>
 			<rich:menuSeparator id="menuSeparatorFilieres" />
 			<rich:menuItem submitMode="client"
 				rendered="#{sessionDataManager.managerIntervenantsManager}">
