Ajout des 3 nouveaux champs

--- a/WebContent/mz/formation/layout/properties_commercial.xhtml
+++ b/WebContent/mz/formation/layout/properties_commercial.xhtml
@@ -20,8 +20,8 @@
 					<ui:insert name="filieres" />
 				</fieldset>
 				<fieldset>
-					<legend> Formations mutualisées </legend>
-					<ui:insert name="mutualisees" />
+					<legend> Moyens et modalités </legend>
+					<ui:insert name="moyens" />
 				</fieldset>
 			</td>
 			<td>
@@ -29,7 +29,10 @@
 					<legend> Commercial </legend>
 					<ui:insert name="commercial" />
 				</fieldset>
-								
+				<fieldset>
+					<legend> Formations mutualisées </legend>
+					<ui:insert name="mutualisees" />
+				</fieldset>			
 				<fieldset>
 					<legend> Formations / Partenaires </legend>
 					<ui:insert name="partenaires" />
