--- a/WebContent/mz/formation/layout/properties_new.xhtml
+++ b/WebContent/mz/formation/layout/properties_new.xhtml
@@ -23,6 +23,10 @@
 					<legend> Associations </legend>
 					<ui:insert name="filieres" />
 				</fieldset>
+				<fieldset>
+					<legend> Moyens et modalités </legend>
+					<ui:insert name="moyens" />
+				</fieldset>
 			</td>
 			<td>
 				<fieldset>
