Déplacement des nouveaux champs dans longlet web

--- a/WebContent/mz/formation/layout/web.xhtml
+++ b/WebContent/mz/formation/layout/web.xhtml
@@ -68,7 +68,10 @@
 					<legend> Contenu </legend>
 					<ui:insert name="contenu" />
 				</fieldset>
-				
+				<fieldset>
+					<legend> Moyens et modalités </legend>
+					<ui:insert name="moyens" />
+				</fieldset>
 			</td>
 		</tr>
 		<tr>
