--- a/WebContent/mz/formation/layout/web.xhtml
+++ b/WebContent/mz/formation/layout/web.xhtml
@@ -69,9 +69,14 @@
 					<ui:insert name="contenu" />
 				</fieldset>
 				<fieldset>
-					<legend> Moyens et modalités </legend>
+					<legend> Moyens pédagogiques et techniques </legend>
 					<ui:insert name="moyens" />
 				</fieldset>
+				<fieldset>
+					<legend> Modalités de suivi et d'évaluation  </legend>
+					<ui:insert name="modalites" />
+				</fieldset>
+				
 			</td>
 		</tr>
 		<tr>
