--- a/WebContent/dmz/layout/template_dmz.xhtml
+++ b/WebContent/dmz/layout/template_dmz.xhtml
@@ -11,6 +11,7 @@
 	<h:html>
 	<h:head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta name="robots" content="noindex, nofollow" />
 		<title>plbsi</title>
 		<link rel="shortcut icon" href="#{request.contextPath}/favicon.ico" />
 		<h:outputStylesheet name="theme.ecss" />
