--- a/WebContent/mz/layout/template.xhtml
+++ b/WebContent/mz/layout/template.xhtml
@@ -10,6 +10,7 @@
 	<h:html>
 	<h:head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta name="robots" content="noindex, nofollow"/>
 		<title>plbsi</title>
 		<link rel="shortcut icon" href="#{request.contextPath}/favicon.ico" />
 
